# NeutrinoETL

./: .gitignore  .gitmodules  .travis.yml  .trayis.yml  CMakeLists.txt  NeutrinoETL_en_US.ts  README.md  main.cpp
assets/: Resources.qrc
src/: CMakeLists.txt  NeutrinoETL_en_US.ts  main.cpp
src/models/: helpers.cpp  helpers.h  neutrinoevent.cpp  neutrinoevent.h  neutrinopoint.cpp  neutrinopoint.h  neutrinotrack.cpp  neutrinotrack.h
src/strategies/: deserialize.cpp  deserialize.h  neutrinoeventdeserializerv1.cpp  neutrinoeventdeserializerv1.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  openglviewport.cpp  openglviewport.h
src/ui/geometry/: cube.cpp  cube.h  geometryengine.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
src/ui/shaders/: fragment.fsh  geometryengine.cpp  geometryengine.h  openglviewport.cpp  openglviewport.h  vertex.vsh
test/ModelsUnitTests/: CMakeLists.txt  main.cpp  tst_eventtests.cpp  tst_eventtests.h  tst_pointtests.cpp  tst_pointtests.h  tst_tracktests.cpp  tst_tracktests.h
test/UiUnitTests/: CMakeLists.txt  main.cpp  tst_viewporttests.cpp  tst_viewporttests.h
